[tool.poetry]
name = "fastapi-notebook-starter"
version = "0.1.0"
description = ""
authors = ["VishnuDileesh <munnadileesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
