[tool.poetry]
name = "fastapi_notebook_starter"
version = "0.1.0"
description = ""
authors = ["VishnuDileesh <munnadileesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
tox = "^4.23.2"
loguru = "^0.7.3"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
